# laavi_window

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart  switch.dart
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: main.cpp
lib/: laavi_window.dart
lib/src/: app_window.dart
lib/src/platform/: laavi_window_platform_interface.dart  method_channel_laavi_window.dart  window.dart
lib/src/windows/: app_window.dart  laavi_window_windows_real.dart  native_api.dart  plugin_channel.dart  window.dart  window_interface.dart  window_util.dart
windows/: CMakeLists.txt  laavi_window.cpp  laavi_window.h  laavi_window_api.cpp  laavi_window_api.h  laavi_window_common.h  laavi_window_plugin.cpp  window_util.h
windows/include/laavi_window/: laavi_window_plugin.h
